:fire: submit fields finished

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <div class="form-group">
             <label for="gender">Seu sexo</label>
             <select id="gender">
+              <option value="" selected disabled>Selecione</option>
               <option value="male">Masculino</option>
               <option value="female">Feminino</option>
             </select>
