--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
           </div>
         </form>
 
-        <div class="result-container">
-          
-        </div>
+        <div class="result-container" id="result"></div>
       </div>
     </div>
     <script src="assets/js/script.js" type="text/javascript"></script>
